--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -6,9 +6,9 @@ framework:
         texter_transports:
         channel_policy:
             # use chat/slack, chat/telegram, sms/twilio or sms/nexmo
-            urgent: [ 'email' ]
-            high: [ 'email' ]
-            medium: [ 'email' ]
-            low: [ 'email' ]
+            urgent: ['chat/discord_log']
+            high: ['chat/discord_log']
+            medium: ['chat/discord_log']
+            low: ['chat/discord_log']
         admin_recipients:
             - { email: admin@example.com }
