--- a/config/services.yaml
+++ b/config/services.yaml
@@ -98,3 +98,5 @@ services:
                 credentials:
                     key: '%env(AWS_S3_ACCESS_ID)%'
                     secret: '%env(AWS_S3_ACCESS_SECRET)%'
+
+    Symfony\Bridge\Monolog\Handler\NotifierHandler: ~
