--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,8 @@ services:
     ports:
         - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: root123
+        - MYSQL_ROOT_PASSWORD=root123
+        - MARIADB_AUTO_UPGRADE=1
   adminer:
     image: adminer
     container_name: adminer-captain
