fix avatar command + deprecations

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
             security: false
 
         api_home:
-            pattern: ^/api$
+            pattern: ^/api(/|/docs)?$
             security: false
 
         api_secured:
