--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,56 @@
-on: [pull_request]
-name: Main
+name: "Lint"
+
+on:
+    pull_request:
+    push:
+        branches:
+            - main
+
 jobs:
     php-cs-fixer:
         name: PHP-CS-Fixer
         runs-on: ubuntu-latest
         steps:
-            -   uses: actions/checkout@v3
+            -   name: Checkout code
+                uses: actions/checkout@v3
+
+            -   name: Install PHP with extensions
+                uses: shivammathur/setup-php@v2
+                with:
+                    coverage: none
+                    extensions: intl
+                    php-version: '8.3'
+                    tools: composer:v2
+
             -   name: PHP-CS-Fixer
                 uses: docker://oskarstark/php-cs-fixer-ga
+
+            -   name: Cache composer
+                uses: actions/cache@v3
+                with:
+                    path: ${{ steps.composer-cache.outputs.dir }}
+                    key: ${{ runner.os }}-composer-${{ hashFiles('composer.lock') }}
+                    restore-keys: ${{ runner.os }}-composer-
+
+            -   name: Install dependencies
+                run: composer install --ansi --no-interaction --no-progress
+
+            -   name: Lint Twig templates
+                if: always() && steps.install.outcome == 'success'
+                run: ./bin/console lint:twig templates --env=prod
+
+            -   name: Lint Parameters and Services
+                if: always() && steps.install.outcome == 'success'
+                run: ./bin/console lint:container --no-debug
+
+            -   name: Lint Doctrine entities
+                if: always() && steps.install.outcome == 'success'
+                run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
+
+            -   name: Lint Composer config
+                if: always() && steps.install.outcome == 'success'
+                run: composer validate --strict
+
+            -   name: Check if any dependencies are compromised
+                if: always() && steps.install.outcome == 'success'
+                run: composer audit
