--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,6 +14,11 @@ jobs:
             -   name: Checkout code
                 uses: actions/checkout@v3
 
+            -   name: PHP-CS-Fixer
+                uses: docker://oskarstark/php-cs-fixer-ga
+                with:
+                    args: --diff --dry-run
+
             -   name: Install PHP with extensions
                 uses: shivammathur/setup-php@v2
                 with:
@@ -22,8 +27,9 @@ jobs:
                     php-version: '8.3'
                     tools: composer:v2
 
-            -   name: PHP-CS-Fixer
-                uses: docker://oskarstark/php-cs-fixer-ga
+            -   name: Set composer cache directory
+                id: composer-cache
+                run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
             -   name: Cache composer
                 uses: actions/cache@v3
