fix composer warnings

--- a/composer.json
+++ b/composer.json
@@ -45,9 +45,9 @@
         "symfony/twig-bundle": "6.4.*",
         "symfony/validator": "6.4.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "twig/cssinliner-extra": "*",
-        "twig/extra-bundle": "*",
-        "twig/inky-extra": "*",
+        "twig/cssinliner-extra": "^3.8.0",
+        "twig/extra-bundle": "^3.8.0",
+        "twig/inky-extra": "^3.8.0",
         "twig/intl-extra": "^3.6"
     },
     "require-dev": {
