--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
                 uses: actions/checkout@v3
 
             -   name: PHP-CS-Fixer
-                uses: docker://oskarstark/php-cs-fixer-ga:efed3cf8f3f4
+                uses: docker://oskarstark/php-cs-fixer-ga@sha256:efed3cf8f3f454a003f4e2dd2b5d7877562550c80a54bc25dbbe5564541c5b4e
                 with:
                     args: --diff --dry-run
 
