--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -11,7 +11,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
-    prefix: '/{_locale<en|fr|es>}'
+    prefix: '/{_locale<en|fr|es|de>}'
 
 logout:
     path: '/logout'
