--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,7 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     locale: 'en'
-    app_locales_array: ['en', 'fr', 'es']
+    app_locales_array: ['en', 'fr', 'es', 'de']
     # @todo delete
     app_mail_from: 'contact@captaincoaster.com'
     app_contact_mail_to: '%app_mail_from%'
