add rate limiter & user checker

--- a/.env
+++ b/.env
@@ -31,8 +31,6 @@ DATABASE_URL=mysql://root:root123@db/captain
 
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
-OAUTH_FACEBOOK_CLIENT_ID=
-OAUTH_FACEBOOK_CLIENT_SECRET=
 
 APP_CONTEXT_HOST=localhost:8080
 APP_CONTEXT_SCHEME=http
@@ -66,3 +64,9 @@ PICTURES_CDN=
 DISCORD_NOTIF_DSN=
 DISCORD_LOG_DSN=
 ###< symfony/discord-notifier ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=flock
+###< symfony/lock ###
