--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
         "knplabs/knp-time-bundle": "^2",
         "knpuniversity/oauth2-client-bundle": "^2.15",
         "league/flysystem-aws-s3-v3": "^3",
-        "league/oauth2-facebook": "^2",
         "league/oauth2-google": "^4",
         "liip/imagine-bundle": "^2.0",
         "oneup/flysystem-bundle": "^4",
@@ -35,9 +34,11 @@
         "symfony/flex": "^2.0",
         "symfony/form": "6.4.*",
         "symfony/http-client": "6.4.*",
+        "symfony/lock": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.4.*",
+        "symfony/rate-limiter": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/stopwatch": "6.4.*",
