--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -30,7 +30,7 @@ when@test:
                 type: fingers_crossed
                 action_level: error
                 handler: nested
-                excluded_http_codes: [404, 405]
+                excluded_http_codes: [404]
                 channels: ["!event"]
             nested:
                 type: stream
@@ -44,7 +44,7 @@ when@prod:
                 type: fingers_crossed
                 action_level: error
                 handler: main_grouped
-                excluded_http_codes: [404, 405]
+                excluded_http_codes: [404]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
                 channels: ["!event", "!deprecation"]
             main_grouped:
