--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -14,7 +14,7 @@ controllers:
     prefix: '/{_locale<en|fr|es|de>}'
 
 logout:
-    path: '/logout'
+    path: '/{_locale<en|fr|es|de>}/logout'
     controller: App\Controller\ConnectController::logout
 
 connect_google_start:
@@ -25,17 +25,8 @@ connect_google_check:
     path: '/connect/google/check'
     controller: App\Controller\ConnectController::connectGoogleCheck
 
-connect_facebook_start:
-    path: '/connect/facebook'
-    controller: App\Controller\ConnectController::connectFacebookStart
-
-connect_facebook_check:
-    path: '/connect/facebook/check'
-    controller: App\Controller\ConnectController::connectFacebookCheck
-
 login_check:
-    path: '/login/check'
-    controller: App\Controller\ConnectController::loginCheck
+    path: '/{_locale<en|fr|es|de>}/login/check'
 
 sitemap:
     path: '/sitemap.xml'
