add command to auto enable pictures

--- a/.env
+++ b/.env
@@ -63,6 +63,7 @@ PICTURES_CDN=
 ###> symfony/discord-notifier ###
 DISCORD_NOTIF_DSN=
 DISCORD_LOG_DSN=
+DISCORD_PICTURE_DSN=
 ###< symfony/discord-notifier ###
 
 ###> symfony/lock ###
