--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,13 +12,14 @@ parameters:
     app_banner_background_path: '%kernel.project_dir%/public/images/background-banner.png'
     router.request_context.host: '%env(APP_CONTEXT_HOST)%'
     router.request_context.scheme: '%env(APP_CONTEXT_SCHEME)%'
-    pictures_cdn_host: '%env(PICTURES_CDN)%'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $picturesHostname: '%env(PICTURES_CDN)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
