--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,11 @@
         "symfony/http-client": "6.4.*",
         "symfony/lock": "6.4.*",
         "symfony/mailer": "6.4.*",
+        "symfony/messenger": "6.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.4.*",
         "symfony/rate-limiter": "6.4.*",
+        "symfony/redis-messenger": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/stopwatch": "6.4.*",
