--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "liip/imagine-bundle": "^2.0",
         "oneup/flysystem-bundle": "^4",
         "stof/doctrine-extensions-bundle": "^1.2",
+        "symfony/amazon-mailer": "6.4.*",
         "symfony/asset": "6.4.*",
         "symfony/cache": "6.4.*",
         "symfony/discord-notifier": "6.4.*",
