--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "symfony/asset": "6.4.*",
         "symfony/cache": "6.4.*",
         "symfony/discord-notifier": "6.4.*",
+        "symfony/dom-crawler": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2.0",
