--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,6 +42,7 @@ services:
     App\Doctrine\ImageListener:
         tags:
             - {name: doctrine.event_listener, event: prePersist, lazy: true}
+            - {name: doctrine.event_listener, event: postPersist, lazy: true}
             - {name: doctrine.event_listener, event: postUpdate, lazy: true}
             - {name: doctrine.event_listener, event: preRemove, lazy: true}
             - {name: doctrine.event_listener, event: postRemove, lazy: true}
