add maintenance mode

--- a/.env
+++ b/.env
@@ -29,6 +29,8 @@ APP_SECRET=0541dda51b5d787ccdbaa1bdcec0d602
 DATABASE_URL=mysql://root:root123@db/captain
 ###< doctrine/doctrine-bundle ###
 
+MAINTENANCE_MODE=0
+
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
 
