refactor ImageManager to use picturesFilesystem

--- a/config/packages/oneup_flysystem.yaml
+++ b/config/packages/oneup_flysystem.yaml
@@ -13,6 +13,6 @@ oneup_flysystem:
     pictures:
       adapter: pictures_original_adapter
       alias: League\Flysystem\Filesystem
-    profile_pictures:
+    profilePictures:
       adapter: profile_pictures_adapter
       alias: League\Flysystem\Filesystem
