--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "symfony/redis-messenger": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
+        "symfony/stimulus-bundle": "^2.23",
         "symfony/stopwatch": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
