--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,8 @@
         "twig/cssinliner-extra": "^3.8.0",
         "twig/extra-bundle": "^3.8.0",
         "twig/inky-extra": "^3.8.0",
-        "twig/intl-extra": "^3.6"
+        "twig/intl-extra": "^3.6",
+        "symfony/ux-translator": "^2.13"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.3",
