--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": "^8.3",
         "ext-json": "*",
-        "api-platform/core": "^3.0",
+        "api-platform/core": "^4.0",
         "aws/aws-sdk-php": "^3.263",
         "beberlei/doctrineextensions": "^1.3",
         "doctrine/doctrine-bundle": "^2.0",
@@ -45,6 +45,7 @@
         "symfony/redis-messenger": "6.4.*",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
+        "symfony/stimulus-bundle": "^2.23",
         "symfony/stopwatch": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
@@ -54,7 +55,8 @@
         "twig/cssinliner-extra": "^3.8.0",
         "twig/extra-bundle": "^3.8.0",
         "twig/inky-extra": "^3.8.0",
-        "twig/intl-extra": "^3.6"
+        "twig/intl-extra": "^3.6",
+        "symfony/ux-translator": "^2.13"
     },
     "require-dev": {
         "phpstan/extension-installer": "^1.3",
