Update dependabot configuration for composer

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,11 +9,11 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: "weekly"
+    ignore:
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
+    groups:
+      all-updates:
+        patterns:
+          - "*"
+    security-updates: true
