--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ phpstan.neon
 /limitless
 
 .DS_Store
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
