--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "symfony/ux-translator": "^2.13"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "3.75",
         "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
