--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=0541dda51b5d787ccdbaa1bdcec0d602
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL=mysql://root:root123@db/captain
+DATABASE_URL=mysql://root:root123@localhost:3306/captain
 ###< doctrine/doctrine-bundle ###
 
 MAINTENANCE_MODE=0
