--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v3
+
             - uses: php-actions/composer@v6
+              with:
+                  php_extensions: redis xsl
+
             - uses: php-actions/phpstan@v3
 
             - name: PHP-CS-Fixer
