try a different path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
             - uses: php-actions/phpstan@v3
               with:
-                  configuration: phpstan.neon
+                  configuration: ./phpstan.neon
                   memory_limit: 256M
 
             - name: PHP-CS-Fixer
