--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,9 @@ jobs:
         steps:
             - uses: actions/checkout@v3
 
+            - name: Lint Composer config
+              run: composer validate --strict
+
             - uses: php-actions/composer@v6
               id: install
               with:
@@ -24,21 +27,13 @@ jobs:
                   args: --diff --dry-run
 
             - name: Lint Twig templates
-              if: always() && steps.install.outcome == 'success'
               run: ./bin/console lint:twig templates --env=prod
 
             - name: Lint Parameters and Services
-              if: always() && steps.install.outcome == 'success'
               run: ./bin/console lint:container --no-debug
 
             - name: Lint Doctrine entities
-              if: always() && steps.install.outcome == 'success'
               run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
 
-            - name: Lint Composer config
-              if: always() && steps.install.outcome == 'success'
-              run: composer validate --strict
-
-            - name: Check if any dependencies are compromised
-              if: always() && steps.install.outcome == 'success'
-              run: composer audit
+            #- name: Check if any dependencies are compromised
+            #  run: composer audit
