--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,20 +1,21 @@
 {
-  "name": "Captain Coaster",
-  "short_name": "Capt Coaster",
-  "display": "standalone",
-  "lang": "en",
-  "dir": "ltr",
-  "icons": [
-    {
-      "src": "/android-chrome-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/android-chrome-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "start_url": "/?utm_source=pwa"
+    "name": "Captain Coaster",
+    "short_name": "Capt Coaster",
+    "display": "standalone",
+    "lang": "en",
+    "dir": "ltr",
+    "icons": [
+        {
+            "src": "/android-chrome-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/android-chrome-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "start_url": "/?utm_source=pwa",
+    "theme_color": "#37474f"
 }
