--- a/config/packages/rate_limiter.yaml
+++ b/config/packages/rate_limiter.yaml
@@ -5,3 +5,7 @@ framework:
             policy: 'sliding_window'
             limit: 3
             interval: '15 minutes'
+        registration:
+            policy: 'sliding_window'
+            limit: 3
+            interval: '15 minutes'
