--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   php-version: "8.4"
-                  extensions: redis, xsl, intl, apcu, gd, opcache
+                  extensions: redis, xsl
 
             - name: Lint Composer config
               run: composer validate --strict
@@ -22,6 +22,7 @@ jobs:
             - uses: php-actions/composer@v6
               id: install
               with:
+                  php_extensions: redis xsl
                   memory_limit: 256M
 
             - uses: php-actions/phpstan@v3
