--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,4 +42,4 @@ jobs:
               run: ./bin/console doctrine:schema:validate --skip-sync -vvv --no-interaction
 
             - name: Check if any dependencies are compromised
-              run: composer audit
+              run: composer audit --abandoned=ignore
