update all recipes

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 ###< symfony/framework-bundle ###
 ###> phpunit/phpunit ###
 /phpunit.xml
-.phpunit.result.cache
+/.phpunit.cache/
 ###< phpunit/phpunit ###
 
 ###> symfony/webpack-encore-bundle ###
