--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,17 @@
-; top-most EditorConfig file
+# editorconfig.org
+
 root = true
 
-; Unix-style newlines
 [*]
 charset = utf-8
-end_of_line = LF
-insert_final_newline = true
-trim_trailing_whitespace = true
+end_of_line = lf
 indent_size = 4
 indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[{compose.yaml,compose.*.yaml}]
+indent_size = 2
 
 [*.md]
-max_line_length = 80
-
-[COMMIT_EDITMSG]
-max_line_length = 0
+trim_trailing_whitespace = false
