--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=0541dda51b5d787ccdbaa1bdcec0d602
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -44,11 +44,7 @@ EWZ_RECAPTCHA_SECRET=
 
 ###> symfony/mailer ###
 MAILER_DSN=null://null
-MAILER_SENDER='null@null.com'
-MAILER_REPLY_TO=null@null.com
 ###< symfony/mailer ###
-
-APP_DELIVERY_ADDRESSES=null@null.com
 
 AWS_S3_ACCESS_ID=
 AWS_S3_ACCESS_SECRET=
@@ -79,3 +75,9 @@ MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 # MAILER_DSN=ses://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
 # MAILER_DSN=ses+smtp://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
 ###< symfony/amazon-mailer ###
+
+###> symfony/routing ###
+# Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
+# See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
+DEFAULT_URI=http://localhost
+###< symfony/routing ###
