--- a/package.json
+++ b/package.json
@@ -3,15 +3,14 @@
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
-        "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/ux-translator": "file:vendor/symfony/ux-translator/assets",
-        "@symfony/webpack-encore": "^4.0.0",
-        "core-js": "^3.23.0",
+        "@symfony/webpack-encore": "^5.0.0",
+        "core-js": "^3.38.0",
         "intl-messageformat": "^10.5.11",
         "regenerator-runtime": "^0.13.9",
         "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-notifier": "^1.15.0"
+        "webpack-cli": "^5.1.0"
     },
     "license": "UNLICENSED",
     "private": true,
