--- a/.env
+++ b/.env
@@ -29,13 +29,8 @@ APP_SECRET=
 DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
-MAINTENANCE_MODE=0
-
 OAUTH_GOOGLE_CLIENT_ID=
 OAUTH_GOOGLE_CLIENT_SECRET=
-
-APP_CONTEXT_HOST=localhost:8080
-APP_CONTEXT_SCHEME=http
 
 ###> excelwebzone/recaptcha-bundle ###
 EWZ_RECAPTCHA_SITE_KEY=
@@ -79,5 +74,5 @@ MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###> symfony/routing ###
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-DEFAULT_URI=http://localhost
+DEFAULT_URI=http://localhost:8000
 ###< symfony/routing ###
