--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@
 
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
-# Commit build files for now
-#/public/build/
+/public/build/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
