--- a/.env
+++ b/.env
@@ -74,5 +74,10 @@ MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###> symfony/routing ###
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-DEFAULT_URI=http://localhost:8000
+DEFAULT_URI=https://localhost:8000
 ###< symfony/routing ###
+
+###> symfony/cache ###
+# Redis cache configuration
+REDIS_URL=redis://localhost:6379
+###< symfony/cache ###
