--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
         "@symfony/webpack-encore": "^5.0.0",
         "autoprefixer": "^10.4.21",
         "core-js": "^3.38.0",
-        "cssnano": "^7.1.2",
+
         "file-loader": "^6.2.0",
         "intl-messageformat": "^10.5.11",
         "less": "^4.4.2",
         "less-loader": "^12.3.0",
         "postcss-loader": "^8.2.0",
         "regenerator-runtime": "^0.13.9",
-        "sharp": "^0.34.4",
+
         "webpack": "^5.74.0",
-        "webpack-bundle-analyzer": "^4.10.2",
+
         "webpack-cli": "^5.1.0",
         "webpack-dev-server": "^5.2.2",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
     "private": true,
+    "browserslist": [
+        "last 2 versions",
+        "> 1%",
+        "not dead",
+        "not IE 11"
+    ],
     "scripts": {
         "dev-server": "encore dev-server --hot",
         "dev": "encore dev",
