--- a/config/services.yaml
+++ b/config/services.yaml
@@ -51,6 +51,11 @@ services:
     App\Service\UnitsService:
         class: App\Service\UnitsService
 
+    App\Twig\HeroiconExtension:
+        arguments:
+            $projectDir: '%kernel.project_dir%'
+        tags: ['twig.extension']
+
     Aws\BedrockRuntime\BedrockRuntimeClient:
         arguments:
             - version: "latest"
