--- a/package.json
+++ b/package.json
@@ -8,16 +8,13 @@
         "@symfony/webpack-encore": "^5.0.0",
         "autoprefixer": "^10.4.21",
         "core-js": "^3.38.0",
-
         "file-loader": "^6.2.0",
         "intl-messageformat": "^10.5.11",
         "less": "^4.4.2",
         "less-loader": "^12.3.0",
         "postcss-loader": "^8.2.0",
         "regenerator-runtime": "^0.13.9",
-
         "webpack": "^5.74.0",
-
         "webpack-cli": "^5.1.0",
         "webpack-dev-server": "^5.2.2",
         "webpack-notifier": "^1.15.0"
@@ -40,6 +37,7 @@
     },
     "dependencies": {
         "bootstrap": "^3.4.1",
+        "heroicons": "^2.2.0",
         "jquery": "^3.7.1",
         "jquery.rateit": "^1.1.6",
         "leaflet": "^1.9.4",
