--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Start npm dev-server",
+            "label": "npm dev-server",
             "type": "shell",
             "command": "npm run dev-server",
             "group": "none",
@@ -15,7 +15,7 @@
             }
         },
         {
-            "label": "Start Symfony server",
+            "label": "symfony server",
             "type": "shell",
             "command": "symfony server:start",
             "group": "none",
