--- a/composer.json
+++ b/composer.json
@@ -48,14 +48,15 @@
         "symfony/stopwatch": "7.*",
         "symfony/translation": "7.*",
         "symfony/twig-bundle": "7.*",
+        "symfony/ux-icons": "^2.31",
+        "symfony/ux-translator": "^2.13",
         "symfony/validator": "7.*",
         "symfony/webpack-encore-bundle": "^2.0",
         "symfonycasts/verify-email-bundle": "^1.16",
         "twig/cssinliner-extra": "^3.8",
         "twig/extra-bundle": "^3.8",
         "twig/inky-extra": "^3.8",
-        "twig/intl-extra": "^3.8",
-        "symfony/ux-translator": "^2.13"
+        "twig/intl-extra": "^3.8"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "3.88.2",
