--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -9,19 +9,15 @@ when@dev:
                 type: stream
                 path: php://stderr
                 level: debug
-                channels: ["!event"]
-            # uncomment to get logging in your browser
-            # you may have to allow bigger header sizes in your Web server configuration
-            #firephp:
-            #    type: firephp
-            #    level: info
-            #chromephp:
-            #    type: chromephp
-            #    level: info
+                channels: ['!event', '!deprecation', '!doctrine']
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
+                channels: ['!event', '!doctrine', '!console', '!deprecation']
+            deprecation:
+                type: stream
+                path: '%kernel.logs_dir%/deprecations.log'
+                channels: [deprecation]
 
 when@test:
     monolog:
@@ -31,10 +27,10 @@ when@test:
                 action_level: error
                 handler: nested
                 excluded_http_codes: [404]
-                channels: ["!event"]
+                channels: ['!event']
             nested:
                 type: stream
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: '%kernel.logs_dir%/%kernel.environment%.log'
                 level: debug
 
 when@prod:
@@ -44,15 +40,15 @@ when@prod:
                 type: fingers_crossed
                 action_level: error
                 handler: main_grouped
-                excluded_http_codes: [404]
+                excluded_http_codes: [404, 405]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
-                channels: ["!event", "!deprecation"]
+                channels: ['!event', '!deprecation']
             main_grouped:
                 type: group
                 members: [file, notifier]
             file:
                 type: rotating_file
-                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: '%kernel.logs_dir%/%kernel.environment%.log'
                 level: debug
                 max_files: 10
                 include_stacktraces: true
@@ -62,9 +58,10 @@ when@prod:
             console:
                 type: console
                 process_psr_3_messages: false
-                channels: ["!event", "!doctrine"]
+                channels: ['!event', '!doctrine', '!deprecation']
             deprecation:
-                type: stream
+                type: rotating_file
+                path: '%kernel.logs_dir%/deprecations.log'
                 channels: [deprecation]
-                path: php://stderr
-                formatter: monolog.formatter.json
+                max_files: 5
+                level: info
