--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -10,5 +10,5 @@ framework:
             # need to improve the monolog transport logic
             urgent: ['chat/discord_log']
             high: ['chat/discord_log']
-            medium: ['chat/discord_log']
-            low: ['chat/discord_log']
+            medium: []
+            low: []
