--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,9 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    locale: "en"
-    app_locales_array: ["en", "fr", "es", "de"]
-    app_contact_mail_to: "%env(MAILER_REPLY_TO)%"
+    locale: 'en'
+    app_locales_array: ['en', 'fr', 'es', 'de']
+    app_contact_mail_to: '%env(MAILER_REPLY_TO)%'
 
 services:
     # default configuration for services in *this* file
@@ -17,7 +17,7 @@ services:
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
-        resource: "../src/"
+        resource: '../src/'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
@@ -25,26 +25,26 @@ services:
     # as action arguments even if you don't extend any base controller class
     App\Service\SitemapService:
         arguments:
-            $locales: "%app_locales_array%"
+            $locales: '%app_locales_array%'
 
     Gedmo\Sluggable\SluggableListener:
         alias: stof_doctrine_extensions.listener.sluggable
 
     Aws\S3\S3Client:
         arguments:
-            - version: "2006-03-01"
-              region: "eu-west-3"
+            - version: '2006-03-01'
+              region: 'eu-west-3'
               credentials:
-                  key: "%env(AWS_S3_ACCESS_ID)%"
-                  secret: "%env(AWS_S3_ACCESS_SECRET)%"
+                  key: '%env(AWS_S3_ACCESS_ID)%'
+                  secret: '%env(AWS_S3_ACCESS_SECRET)%'
 
     Aws\CloudFront\CloudFrontClient:
         arguments:
-            - version: "latest"
-              region: "eu-west-3"
+            - version: 'latest'
+              region: 'eu-west-3'
               credentials:
-                  key: "%env(AWS_S3_ACCESS_ID)%"
-                  secret: "%env(AWS_S3_ACCESS_SECRET)%"
+                  key: '%env(AWS_S3_ACCESS_ID)%'
+                  secret: '%env(AWS_S3_ACCESS_SECRET)%'
 
     Symfony\Bridge\Monolog\Handler\NotifierHandler: ~
 
@@ -53,8 +53,8 @@ services:
 
     Aws\BedrockRuntime\BedrockRuntimeClient:
         arguments:
-            - version: "latest"
-              region: "us-east-1"
+            - version: 'latest'
+              region: 'us-east-1'
               credentials:
-                  key: "%env(AWS_S3_ACCESS_ID)%"
-                  secret: "%env(AWS_S3_ACCESS_SECRET)%"
+                  key: '%env(AWS_S3_ACCESS_ID)%'
+                  secret: '%env(AWS_S3_ACCESS_SECRET)%'
